[2단계 - 경로 조회 기능] 루카(백경환) 미션 제출합니다. (#204)
* feat: 최단 경로 찾기 API 핸들러 및 테스트 추가

* feat: jGraphT 라이브러리 추가 및 관련 도메인 로직 추가

* feat: 요금 계산 관련 로직 추가

* test: 최단거리 구하는 기능 테스트

* chore: Subway 도메인 Lines로 이름 변경

* feat: Lines에서 section의 Line찾는 기능 추가

* feat: PathService 최단 거리 기능 추가

* test: 변경사항 적용

* test: 테스트 환경 분리

* chore: 사소한 수정

* refactor: SectionRepository 에서 하던 부분 Service로 이동

* docs: README 수정

* refactor: 커스텀 예외 추가

- Station과 Line 삭제 시, FK 예외 예상되어 제약조건 예외 발생하면 예외 커스텀 예외로 전환

* feat: Request에 Valid 추가

* feat: 예외 처리 controllerAdvice 추가

* refactor: 이름, 색 중복 검사 관련 Repository에서 하도록 변경

* refactor: 그래프 라이브러리 상속해서 사용하던 부분을 조합으로 변경

* refactor: SubwayFareManager 삭제하고 enum으로 변경

* test: 복잡한 jsonPath로 확인하던 부분 objectMapper 사용하게 변경

* test: fixture 추가

* chore: java 컨벤션