@@ -8,13 +8,14 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import subway.domain.*;
+import subway.dto.LineStationRequest;
 import subway.dto.LineStationResponse;
-import subway.dto.LineStationsRequest;
 import subway.dto.StationResponse;
 import subway.repository.LineRepository;
 import subway.repository.SectionRepository;
 import subway.repository.StationRepository;
 
+import java.util.Collections;
 import java.util.List;
 
 import static org.mockito.Mockito.*;
@@ -35,7 +36,7 @@ class LineStationServiceTest {
     @Test
     void 노선에_역을_추가한다() {
         //given
-        LineStationsRequest request = new LineStationsRequest(1L, 2L, 10);
+        LineStationRequest request = new LineStationRequest(1L, 2L, 10);
         LineName name = new LineName("테스트노선");
         LineColor color = new LineColor("테스트색");
         Line line = new Line(1L, name, color, Sections.create());
@@ -47,8 +48,10 @@ class LineStationServiceTest {
         //when
         lineStationService.saveLinesStations(line.getId(), request);
         //then
-        Line updateLine = new Line(1L, name, color, new Sections(List.of(new Section(station1, station2, new Distance(10)))));
-        verify(sectionRepository, times(1)).updateByLine(line, updateLine);
+        org.junit.jupiter.api.Assertions.assertAll(
+                () -> verify(sectionRepository, times(1)).deleteAll(Collections.emptyList(), line),
+                () -> verify(sectionRepository, times(1)).saveAll(List.of(new Section(station1, station2, new Distance(10))), line)
+        );
     }
 
     @DisplayName("모든 노선의 역을 조회한다")
@@ -93,11 +96,13 @@ class LineStationServiceTest {
         Station station2 = new Station(2L, "테스트역2");
         Line line = new Line(1L, new LineName("테스트노선1"), new LineColor("테스트색1"), new Sections(List.of(new Section(station1, station2, new Distance(10)))));
         when(lineRepository.findById(1L)).thenReturn(line);
-        Line updateLine = new Line(1L, new LineName("테스트노선1"), new LineColor("테스트색1"), Sections.create());
         when(stationRepository.findById(1L)).thenReturn(station1);
         //when
         lineStationService.deleteLinesStations(1L, 1L);
         //then
-        verify(sectionRepository, times(1)).updateByLine(line, updateLine);
+        org.junit.jupiter.api.Assertions.assertAll(
+                () -> verify(sectionRepository, times(1)).deleteAll(List.of(new Section(station1, station2, new Distance(10))), line),
+                () -> verify(sectionRepository, times(1)).saveAll(Collections.emptyList(), line)
+        );
     }
 }
